[~] - Статистика по диспетчерам

--- a/CRMPhone/CRMPhone.csproj
+++ b/CRMPhone/CRMPhone.csproj
@@ -135,6 +135,9 @@
     <Compile Include="Controls\Admins\WorkerAdminControl.xaml.cs">
       <DependentUpon>WorkerAdminControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\DispatcherControl.xaml.cs">
+      <DependentUpon>DispatcherControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\AlertAndWorkControl.xaml.cs">
       <DependentUpon>AlertAndWorkControl.xaml</DependentUpon>
     </Compile>
@@ -282,6 +285,7 @@
     <Compile Include="ViewModel\Admins\StreetAdminDialogViewModel.cs" />
     <Compile Include="ViewModel\Admins\WorkerAdminDialogViewModel.cs" />
     <Compile Include="ViewModel\Admins\WorkerHouseAndTypeAdminDialogViewModel.cs" />
+    <Compile Include="ViewModel\DispatcherControlContext.cs" />
     <Compile Include="ViewModel\AlertAndWorkControlContext.cs" />
     <Compile Include="ViewModel\CalendarDialogViewModel.cs" />
     <Compile Include="ViewModel\CallsNotificationContext.cs" />
@@ -390,6 +394,10 @@
     <Page Include="Controls\Admins\WorkerAdminControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\DispatcherControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Controls\AlertAndWorkControl.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -631,6 +639,7 @@
     <Resource Include="Images\Calendar_small.png" />
     <Resource Include="Images\delete.png" />
     <Resource Include="Images\numbers.png" />
+    <Resource Include="Images\phones.png" />
     <Content Include="russian.lex">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
