--- a/RequestService/RequestServiceImpl.csproj
+++ b/RequestService/RequestServiceImpl.csproj
@@ -60,6 +60,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppSettings.cs" />
@@ -127,6 +128,7 @@
     <Compile Include="Dto\StatusHistoryDto.cs" />
     <Compile Include="Dto\StreetDto.cs" />
     <Compile Include="Dto\StreetPrefixDto.cs" />
+    <Compile Include="Dto\StreetSearchDto.cs" />
     <Compile Include="Dto\TransferIntoDto.cs" />
     <Compile Include="Dto\UserDto.cs" />
     <Compile Include="Dto\WebCallsDto.cs" />
