[~] - CallCenter 3.33. Фильтры по мастерам, УК, исполнителям как по адресам + 2.23 для АИЖК

--- a/AppNotificationForWeb/App.config
+++ b/AppNotificationForWeb/App.config
@@ -5,7 +5,7 @@
     </startup>
   <appSettings>
     <add key="CallCenterIP" value="192.168.1.130" />
-    <add key="OneSignalKey" value="cmscms" />
+    <add key="OneSignalKey" value="ODZkMmE0YmQtODdjYy00ZmFmLTlhOTUtZjg2ODVlNTU3Nzc1" />
   </appSettings>
     <system.serviceModel>
         <bindings />
