[~] - для АИЖК вкладка напоминалки + админка автообзвон

--- a/ClientPhone/ClientPhone.csproj
+++ b/ClientPhone/ClientPhone.csproj
@@ -273,6 +273,7 @@
     <Compile Include="Services\ChangeAddressDto.cs" />
     <Compile Include="Services\NewRequestDto.cs" />
     <Compile Include="Services\RestRequestService.cs" />
+    <Compile Include="Services\RingUpListDto.cs" />
     <Compile Include="Services\SaveAlertDto.cs" />
     <Compile Include="ViewModel\AddRatingDialogViewModel.cs" />
     <Compile Include="BooleanToVisibilityConverter.cs" />
