[~] - pjsip полуфинал (не работает unhold)

--- a/CRMPhone/CRMPhone.csproj
+++ b/CRMPhone/CRMPhone.csproj
@@ -672,6 +672,9 @@
     <Resource Include="Images\audio_settings_48.png" />
     <Resource Include="Images\add.png" />
     <Resource Include="Images\refresh.png" />
+    <Content Include="pjsua2.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="russian.lex">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -810,13 +813,6 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\PJSip.Interop.0.7.4\build\PJSip.Interop.targets" Condition="Exists('..\packages\PJSip.Interop.0.7.4\build\PJSip.Interop.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\PJSip.Interop.0.7.4\build\PJSip.Interop.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\PJSip.Interop.0.7.4\build\PJSip.Interop.targets'))" />
-  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
